--- a/microV.ui
+++ b/microV.ui
@@ -142,7 +142,7 @@
          <item>
           <widget class="QToolBox" name="toolBox">
            <property name="currentIndex">
-            <number>1</number>
+            <number>4</number>
            </property>
            <widget class="QWidget" name="page">
             <property name="geometry">
@@ -208,8 +208,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>436</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -306,8 +306,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>436</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -379,7 +379,7 @@
               <x>0</x>
               <y>0</y>
               <width>356</width>
-              <height>436</height>
+              <height>409</height>
              </rect>
             </property>
             <attribute name="label">
@@ -546,6 +546,95 @@
              </item>
             </layout>
            </widget>
+           <widget class="QWidget" name="page_3">
+            <attribute name="label">
+             <string>MOCO</string>
+            </attribute>
+            <layout class="QGridLayout" name="gridLayout_27">
+             <item row="0" column="0" colspan="2">
+              <widget class="QPushButton" name="mocoConnect">
+               <property name="text">
+                <string>Connect</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QSpinBox" name="mocoPosition">
+               <property name="readOnly">
+                <bool>true</bool>
+               </property>
+               <property name="maximum">
+                <number>999999999</number>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="2">
+              <widget class="QPushButton" name="mocoHome">
+               <property name="text">
+                <string>Home</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QPushButton" name="pushButton_3">
+               <property name="text">
+                <string>PushButton</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QSpinBox" name="spinBox"/>
+             </item>
+             <item row="2" column="2">
+              <widget class="QPushButton" name="pushButton_4">
+               <property name="text">
+                <string>PushButton</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QPushButton" name="mocoMoveAbs">
+               <property name="text">
+                <string>MoveTo</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QSpinBox" name="mocoMoveAbs_target">
+               <property name="maximum">
+                <number>999999999</number>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0" colspan="2">
+              <widget class="QComboBox" name="mocoSection">
+               <item>
+                <property name="text">
+                 <string>None</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>BP1</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>BP2</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Mirror-&gt;PMT2</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+            </layout>
+           </widget>
           </widget>
          </item>
         </layout>
@@ -567,14 +656,14 @@
             <number>2</number>
            </property>
            <property name="currentIndex">
-            <number>3</number>
+            <number>2</number>
            </property>
            <widget class="QWidget" name="CCS200">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>225</width>
+              <width>229</width>
               <height>122</height>
              </rect>
             </property>
@@ -1141,8 +1230,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>348</height>
+              <width>268</width>
+              <height>309</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1370,7 +1459,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>152</width>
+              <width>156</width>
               <height>111</height>
              </rect>
             </property>
@@ -2246,7 +2335,7 @@
                    <property name="maximum">
                     <number>620</number>
                    </property>
-                   <property name="displayIntegerBase" stdset="0">
+                   <property name="displayIntegerBase">
                     <number>10</number>
                    </property>
                   </widget>
@@ -2339,7 +2428,7 @@
                 <property name="maximum">
                  <number>620</number>
                 </property>
-                <property name="displayIntegerBase" stdset="0">
+                <property name="displayIntegerBase">
                  <number>10</number>
                 </property>
                </widget>
@@ -2565,15 +2654,12 @@
             <string>MultiScan</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_22">
-            <item row="7" column="0">
+            <item row="6" column="0">
              <layout class="QGridLayout" name="gridLayout_23">
               <item row="1" column="0">
                <widget class="QCheckBox" name="n_meas_laser_spectra_track">
                 <property name="text">
                  <string>track</string>
-                </property>
-                <property name="checked">
-                 <bool>true</bool>
                 </property>
                </widget>
               </item>
@@ -2589,16 +2675,6 @@
                   <string>B</string>
                  </property>
                 </item>
-                <item>
-                 <property name="text">
-                  <string>AB</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>BA</string>
-                 </property>
-                </item>
                </widget>
               </item>
               <item row="2" column="0">
@@ -2607,13 +2683,13 @@
                  <string>Fast</string>
                 </property>
                 <property name="checked">
-                 <bool>false</bool>
+                 <bool>true</bool>
                 </property>
                </widget>
               </item>
              </layout>
             </item>
-            <item row="10" column="0">
+            <item row="9" column="0">
              <widget class="QPushButton" name="n_meas_laser_spectra_go">
               <property name="text">
                <string>Start</string>
@@ -2623,7 +2699,7 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="0">
+            <item row="4" column="0">
              <widget class="QTableWidget" name="n_meas_laser_spectra_probe">
               <attribute name="horizontalHeaderCascadingSectionResizes">
                <bool>false</bool>
@@ -2938,6 +3014,13 @@
                 </property>
                </widget>
               </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="labela">
+                <property name="text">
+                 <string>nan</string>
+                </property>
+               </widget>
+              </item>
               <item row="3" column="1">
                <widget class="QDoubleSpinBox" name="n_meas_laser_spectra_Z_interface">
                 <property name="decimals">
@@ -2961,36 +3044,7 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="0">
-               <widget class="QCheckBox" name="n_meas_laser_spectra_Z_interface_optim">
-                <property name="text">
-                 <string>Z optim.</string>
-                </property>
-                <property name="checked">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
              </layout>
-            </item>
-            <item row="3" column="0">
-             <widget class="QPushButton" name="n_meas_laser_spectra_set_point">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-                <horstretch>3</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Set Point</string>
-              </property>
-              <property name="checkable">
-               <bool>true</bool>
-              </property>
-             </widget>
             </item>
             <item row="0" column="0">
              <widget class="QGroupBox" name="groupBox_15">
@@ -3055,7 +3109,7 @@
                    <property name="maximum">
                     <number>620</number>
                    </property>
-                   <property name="displayIntegerBase" stdset="0">
+                   <property name="displayIntegerBase">
                     <number>10</number>
                    </property>
                   </widget>
@@ -3065,35 +3119,19 @@
               </layout>
              </widget>
             </item>
-            <item row="4" column="0">
-             <layout class="QGridLayout" name="gridLayout_27">
-              <item row="0" column="0">
-               <widget class="QCheckBox" name="n_meas_laser_spectra_grid">
-                <property name="text">
-                 <string>gridScan</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QSpinBox" name="n_meas_laser_spectra_grid_x">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="2">
-               <widget class="QSpinBox" name="n_meas_laser_spectra_grid_y">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item row="11" column="0">
-             <widget class="QPushButton" name="n_meas_laser_spectra_pause">
+            <item row="3" column="0">
+             <widget class="QPushButton" name="n_meas_laser_spectra_set_point">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>3</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
-               <string>Pause</string>
+               <string>Set Point</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
