--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>3</number>
+        <number>6</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -149,8 +149,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>224</width>
-              <height>148</height>
+              <width>196</width>
+              <height>115</height>
              </rect>
             </property>
             <attribute name="label">
@@ -208,8 +208,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>294</width>
-              <height>198</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -306,8 +306,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>143</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -378,8 +378,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>272</height>
+              <width>241</width>
+              <height>197</height>
              </rect>
             </property>
             <attribute name="label">
@@ -551,8 +551,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>353</width>
-              <height>528</height>
+              <width>356</width>
+              <height>555</height>
              </rect>
             </property>
             <attribute name="label">
@@ -671,8 +671,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>259</width>
-              <height>162</height>
+              <width>229</width>
+              <height>122</height>
              </rect>
             </property>
             <attribute name="label">
@@ -776,8 +776,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>186</width>
-              <height>86</height>
+              <width>174</width>
+              <height>70</height>
              </rect>
             </property>
             <attribute name="label">
@@ -818,8 +818,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>178</width>
-              <height>138</height>
+              <width>156</width>
+              <height>111</height>
              </rect>
             </property>
             <attribute name="label">
@@ -892,8 +892,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>293</width>
-              <height>398</height>
+              <width>240</width>
+              <height>295</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1312,8 +1312,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>333</width>
-              <height>508</height>
+              <width>356</width>
+              <height>494</height>
              </rect>
             </property>
             <attribute name="label">
@@ -2015,7 +2015,7 @@
                   <bool>false</bool>
                  </property>
                  <property name="minimum">
-                  <double>1.000000000000000</double>
+                  <double>0.010000000000000</double>
                  </property>
                  <property name="maximum">
                   <double>9999.000000000000000</double>
@@ -2704,6 +2704,79 @@
             <string>MultiScan</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_22">
+            <item row="0" column="0">
+             <widget class="QGroupBox" name="groupBox_15">
+              <property name="title">
+               <string>Laser_wavelength</string>
+              </property>
+              <layout class="QVBoxLayout" name="verticalLayout_18">
+               <item>
+                <layout class="QGridLayout" name="gridLayout_24">
+                 <item row="0" column="2">
+                  <widget class="QLabel" name="label_36">
+                   <property name="text">
+                    <string>Step</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1">
+                  <widget class="QLabel" name="label_37">
+                   <property name="text">
+                    <string>End</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_38">
+                   <property name="text">
+                    <string>Start</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="0">
+                  <widget class="QSpinBox" name="n_meas_laser_spectra_start">
+                   <property name="minimum">
+                    <number>680</number>
+                   </property>
+                   <property name="maximum">
+                    <number>1299</number>
+                   </property>
+                   <property name="value">
+                    <number>850</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="QSpinBox" name="n_meas_laser_spectra_end">
+                   <property name="minimum">
+                    <number>681</number>
+                   </property>
+                   <property name="maximum">
+                    <number>1300</number>
+                   </property>
+                   <property name="value">
+                    <number>1300</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="2">
+                  <widget class="QSpinBox" name="n_meas_laser_spectra_step">
+                   <property name="minimum">
+                    <number>1</number>
+                   </property>
+                   <property name="maximum">
+                    <number>620</number>
+                   </property>
+                   <property name="displayIntegerBase">
+                    <number>10</number>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+              </layout>
+             </widget>
+            </item>
             <item row="6" column="0">
              <layout class="QGridLayout" name="gridLayout_23">
               <item row="1" column="0">
@@ -2726,6 +2799,16 @@
                 <item>
                  <property name="text">
                   <string>B</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>AB</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>mid</string>
                  </property>
                 </item>
                </widget>
@@ -3115,79 +3198,6 @@
               </item>
              </layout>
             </item>
-            <item row="0" column="0">
-             <widget class="QGroupBox" name="groupBox_15">
-              <property name="title">
-               <string>Laser_wavelength</string>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_18">
-               <item>
-                <layout class="QGridLayout" name="gridLayout_24">
-                 <item row="0" column="2">
-                  <widget class="QLabel" name="label_36">
-                   <property name="text">
-                    <string>Step</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="0" column="1">
-                  <widget class="QLabel" name="label_37">
-                   <property name="text">
-                    <string>End</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_38">
-                   <property name="text">
-                    <string>Start</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0">
-                  <widget class="QSpinBox" name="n_meas_laser_spectra_start">
-                   <property name="minimum">
-                    <number>680</number>
-                   </property>
-                   <property name="maximum">
-                    <number>1299</number>
-                   </property>
-                   <property name="value">
-                    <number>850</number>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="1">
-                  <widget class="QSpinBox" name="n_meas_laser_spectra_end">
-                   <property name="minimum">
-                    <number>681</number>
-                   </property>
-                   <property name="maximum">
-                    <number>1300</number>
-                   </property>
-                   <property name="value">
-                    <number>1300</number>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="2">
-                  <widget class="QSpinBox" name="n_meas_laser_spectra_step">
-                   <property name="minimum">
-                    <number>1</number>
-                   </property>
-                   <property name="maximum">
-                    <number>620</number>
-                   </property>
-                   <property name="displayIntegerBase">
-                    <number>10</number>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
-               </item>
-              </layout>
-             </widget>
-            </item>
             <item row="3" column="0">
              <widget class="QPushButton" name="n_meas_laser_spectra_set_point">
               <property name="sizePolicy">
@@ -3198,6 +3208,16 @@
               </property>
               <property name="text">
                <string>Set Point</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="0">
+             <widget class="QPushButton" name="n_meas_laser_spectra_pause">
+              <property name="text">
+               <string>Pause</string>
               </property>
               <property name="checkable">
                <bool>true</bool>
@@ -3239,7 +3259,7 @@
      <x>0</x>
      <y>0</y>
      <width>688</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
