--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>6</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -149,8 +149,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>224</width>
-              <height>148</height>
+              <width>196</width>
+              <height>115</height>
              </rect>
             </property>
             <attribute name="label">
@@ -208,8 +208,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>294</width>
-              <height>198</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -306,8 +306,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>143</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -378,8 +378,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>272</height>
+              <width>241</width>
+              <height>197</height>
              </rect>
             </property>
             <attribute name="label">
@@ -551,8 +551,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>353</width>
-              <height>528</height>
+              <width>356</width>
+              <height>555</height>
              </rect>
             </property>
             <attribute name="label">
@@ -671,8 +671,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>259</width>
-              <height>162</height>
+              <width>229</width>
+              <height>122</height>
              </rect>
             </property>
             <attribute name="label">
@@ -776,8 +776,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>186</width>
-              <height>86</height>
+              <width>174</width>
+              <height>70</height>
              </rect>
             </property>
             <attribute name="label">
@@ -818,8 +818,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>178</width>
-              <height>138</height>
+              <width>156</width>
+              <height>111</height>
              </rect>
             </property>
             <attribute name="label">
@@ -892,8 +892,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>293</width>
-              <height>398</height>
+              <width>240</width>
+              <height>295</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1312,8 +1312,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>333</width>
-              <height>508</height>
+              <width>356</width>
+              <height>494</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1561,6 +1561,13 @@
                   </property>
                   <property name="checkable">
                    <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="1">
+                 <widget class="QCheckBox" name="andorCameraExposureAdaptive">
+                  <property name="text">
+                   <string>Adaptive</string>
                   </property>
                  </widget>
                 </item>
@@ -1924,8 +1931,14 @@
                  <property name="toolTip">
                   <string>threshold_rel</string>
                  </property>
+                 <property name="decimals">
+                  <number>4</number>
+                 </property>
                  <property name="minimum">
-                  <double>0.010000000000000</double>
+                  <double>0.000100000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>99.999899999999997</double>
                  </property>
                  <property name="value">
                   <double>0.500000000000000</double>
@@ -2710,7 +2723,7 @@
                <enum>QLayout::SetDefaultConstraint</enum>
               </property>
               <item>
-               <widget class="QLineEdit" name="n_meas_laser_spectra_Path">
+               <widget class="QLineEdit" name="n_meas_laser_spectra_filePath">
                 <property name="text">
                  <string>./data/multiScan</string>
                 </property>
@@ -3293,7 +3306,7 @@
      <x>0</x>
      <y>0</y>
      <width>688</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
